# linux-car

./: .gitignore  CMakeLists.txt  README.md  car_conf.json  package.xml
cmake/: build_for_lichee_pi_zero.cmake  build_for_mqpro.cmake
docs/: Lichee_Pi_Zero.md  Mangopi_MQ_Pro.md  Mangopi_MQ_Quad.md  licheepizero_conf.json  mqpro_conf.json  mqquad_conf.json
drivers/: iic.h
include/: interface.h
live_video/: G711AudioStreamSource.hh  OnDemandRTSPServer.h
moto/: bts7960.cpp  moto.cpp  speed_pid.cpp
remote/: Gamepad.cpp  RemoteAdapter.h  RemoteFactory.h  remote.h  sbus.cpp  sbus.h  sonnyps2.cpp
ros2/: README.md
sensor/: gpio_key.cpp  gps.cpp  iio_bus.h  srf04.cpp  vl53l0x.cpp
sensor/H264_camera/: H264_UVC_Cap.cpp
sensor/audio_source/: audio_encode.h
smartcar/: CarFactory.cpp  CarFactory.h  README.md  armpi.h  f1c100s.h  makecar.cpp  makecar.h
src/: S99remotecar  main.cpp  smart_car
src/live_video/: G711AudioStreamServerMediaSubsession.hh  H264FramedLiveSource.cpp  H264FramedLiveSource.hh
src/moto/: README.md  bts7960.h  moto.h  speed_pid.h
src/remote/: Gamepad.hpp  RemoteAdapter.cpp  keyboard.cpp  keyboard.h  socket.cpp  socket.h  sonnyps2.h
src/sensor/: gps.h  mpu6050.cpp  mpu9250.cpp  rotary_encoder.cpp  rotary_encoder.h  srf04.h  vl53l0x.h
src/sensor/camera/: h264_camera.cpp
src/sensor/mpu6050/: driver_mpu6050_interface.cpp
src/sensor/mpu9250/: driver_mpu9250_interface.cpp
src/smartcar/: armpi.cpp  f1c100s.cpp
src/utils/: xinotify.h
utils/: jsonparse.h  utils.cpp  utils.h  xinotify.cpp
